# hangfire-mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.ps1  setup.py
scripts/: run-dashboard.ps1  run-dashboard.sh  run-inspector.ps1  run-inspector.sh
src/hangfire_mcp/: __init__.py  __main__.py  config.py  dashboard.py  database.py  models.py  server.py
src/hangfire_mcp/tools/: __init__.py  jobs.py  recurring.py  stats.py
tests/: __init__.py
